force-app/main/default/objects/IIT__c/fields/ITSR_DIITContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ITSR_DIITContactEmail__c</fullName>
    <label>ITSR_DIITContactEmail</label>
    <type>Email</type>
</CustomField>