force-app/main/default/objects/IIT__c/fields/ITSR_DIITContactID__c.field-meta.xml
<CustomField>
    <fullName>ITSR_DIITContactID__c</fullName>
    <label>ITSR_DIITContactID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>