force-app/main/default/objects/IIT__c/fields/ITSR_DIITContactName__c.field-meta.xml
<CustomField>
    <fullName>ITSR_DIITContactName__c</fullName>
    <label>ITSR_DIITContactName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>