force-app/main/default/objects/IIT__c/fields/ITSR_DIITContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ITSR_DIITContactPhone__c</fullName>
    <label>ITSR_DIITContactPhone</label>
    <type>Phone</type>
</CustomField>