force-app/main/default/objects/IIT__c/fields/ITSR_hsPurchaseItemDesc__c.field-meta.xml
<CustomField>
    <fullName>ITSR_hsPurchaseItemDesc__c</fullName>
    <label>ITSR_hsPurchaseItemDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>