force-app/main/default/objects/IIT__c/fields/ITSR_hsPurchaseItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>ITSR_hsPurchaseItemQuantity__c</fullName>
    <label>ITSR_hsPurchaseItemQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>