force-app/main/default/objects/IIT__c/fields/ITSR_hsPurchaseJustification__c.field-meta.xml
<CustomField>
    <fullName>ITSR_hsPurchaseJustification__c</fullName>
    <label>ITSR_hsPurchaseJustification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>