force-app/main/default/objects/IIT__c/fields/ITSR_NonVerifyApprover__c.field-meta.xml
<CustomField>
    <fullName>ITSR_NonVerifyApprover__c</fullName>
    <label>ITSR_NonVerifyApprover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>