force-app/main/default/objects/IIT__c/fields/ITSR_psBSCapitalID__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psBSCapitalID__c</fullName>
    <label>ITSR_psBSCapitalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>