force-app/main/default/objects/IIT__c/fields/ITSR_psBSCTLBCInfo__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psBSCTLBCInfo__c</fullName>
    <label>ITSR_psBSCTLBCInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>