force-app/main/default/objects/IIT__c/fields/ITSR_psBSCTLRCInfo__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psBSCTLRCInfo__c</fullName>
    <label>ITSR_psBSCTLRCInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>