force-app/main/default/objects/IIT__c/fields/ITSR_psBSGrantExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psBSGrantExpireDate__c</fullName>
    <label>ITSR_psBSGrantExpireDate</label>
    <type>Date</type>
</CustomField>