force-app/main/default/objects/IIT__c/fields/ITSR_psBSGrantName__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psBSGrantName__c</fullName>
    <label>ITSR_psBSGrantName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>