force-app/main/default/objects/IIT__c/fields/ITSR_psBudgetSourceOtherDesc__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psBudgetSourceOtherDesc__c</fullName>
    <label>ITSR_psBudgetSourceOtherDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>