force-app/main/default/objects/IIT__c/fields/ITSR_psNewOrExistContract__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psNewOrExistContract__c</fullName>
    <label>ITSR_psNewOrExistContract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>