force-app/main/default/objects/IIT__c/fields/ITSR_psProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psProjectDescription__c</fullName>
    <label>ITSR_psProjectDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>