force-app/main/default/objects/IIT__c/fields/ITSR_psProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psProjectEndDate__c</fullName>
    <label>ITSR_psProjectEndDate</label>
    <type>Date</type>
</CustomField>