force-app/main/default/objects/IIT__c/fields/ITSR_psProjectHiringManager__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psProjectHiringManager__c</fullName>
    <label>ITSR_psProjectHiringManager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>