force-app/main/default/objects/IIT__c/fields/ITSR_psProjectHiringManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psProjectHiringManagerEmail__c</fullName>
    <label>ITSR_psProjectHiringManagerEmail</label>
    <type>Email</type>
</CustomField>