force-app/main/default/objects/IIT__c/fields/ITSR_psProjectHiringManagerPhone__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psProjectHiringManagerPhone__c</fullName>
    <label>ITSR_psProjectHiringManagerPhone</label>
    <type>Phone</type>
</CustomField>