force-app/main/default/objects/IIT__c/fields/ITSR_psProjectName__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psProjectName__c</fullName>
    <label>ITSR_psProjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>