force-app/main/default/objects/IIT__c/fields/ITSR_psProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>ITSR_psProjectStartDate__c</fullName>
    <label>ITSR_psProjectStartDate</label>
    <type>Date</type>
</CustomField>