force-app/main/default/objects/IIT__c/fields/MDR_AcceptDOHMHPolicy__c.field-meta.xml
<CustomField>
    <fullName>MDR_AcceptDOHMHPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDR_AcceptDOHMHPolicy</label>
    <type>Checkbox</type>
</CustomField>