force-app/main/default/objects/IIT__c/fields/MDR_AcceptDOHMHPolicyBy__c.field-meta.xml
<CustomField>
    <fullName>MDR_AcceptDOHMHPolicyBy__c</fullName>
    <label>MDR_AcceptDOHMHPolicyBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>