force-app/main/default/objects/IIT__c/fields/MDR_ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>MDR_ActivationDate__c</fullName>
    <label>MDR_ActivationDate</label>
    <type>Date</type>
</CustomField>