force-app/main/default/objects/IIT__c/fields/MDR_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>MDR_Additional_Information__c</fullName>
    <description>This field capture entire information on the MDR request</description>
    <label>MDR Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>