force-app/main/default/objects/IIT__c/fields/MDR_Address__c.field-meta.xml
<CustomField>
    <fullName>MDR_Address__c</fullName>
    <label>MDR Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>