force-app/main/default/objects/IIT__c/fields/MDR_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>MDR_Approval_Status__c</fullName>
    <label>MDR Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Waiting DOHMH Police</fullName>
            </value>
            <value>
                <fullName>Waiting IT Mobile Team</fullName>
            </value>
            <value>
                <fullName>Processed - Awaiting Device Pickup</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>