force-app/main/default/objects/IIT__c/fields/MDR_AssetId__c.field-meta.xml
<CustomField>
    <fullName>MDR_AssetId__c</fullName>
    <label>MDR_AssetId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>