force-app/main/default/objects/IIT__c/fields/MDR_Bureau__c.field-meta.xml
<CustomField>
    <fullName>MDR_Bureau__c</fullName>
    <label>MDR Bureau</label>
    <length>75</length>
    <type>Text</type>
</CustomField>