force-app/main/default/objects/IIT__c/fields/MDR_BYOD_PhoneType__c.field-meta.xml
<CustomField>
    <fullName>MDR_BYOD_PhoneType__c</fullName>
    <label>MDR_BYOD_PhoneType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple Phone</fullName>
            </value>
            <value>
                <fullName>Android Phone</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>