force-app/main/default/objects/IIT__c/fields/MDR_BYOD_Policy__c.field-meta.xml
<CustomField>
    <fullName>MDR_BYOD_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDR BYOD Policy</label>
    <type>Checkbox</type>
</CustomField>