force-app/main/default/objects/IIT__c/fields/MDR_ChangeFeaturePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>MDR_ChangeFeaturePhoneNumber__c</fullName>
    <label>MDR_ChangeFeaturePhoneNumber</label>
    <type>Phone</type>
</CustomField>