force-app/main/default/objects/IIT__c/fields/MDR_Completing_this_request_on_behalf_of__c.field-meta.xml
<CustomField>
    <fullName>MDR_Completing_this_request_on_behalf_of__c</fullName>
    <label>MDR Completing this request on behalf of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Another User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>