force-app/main/default/objects/IIT__c/fields/MDR_DeviceReplacementReason__c.field-meta.xml
<CustomField>
    <fullName>MDR_DeviceReplacementReason__c</fullName>
    <label>MDR_DeviceReplacementReason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>