force-app/main/default/objects/IIT__c/fields/MDR_Division__c.field-meta.xml
<CustomField>
    <fullName>MDR_Division__c</fullName>
    <label>MDR Division</label>
    <length>3</length>
    <type>Text</type>
</CustomField>