force-app/main/default/objects/IIT__c/fields/MDR_Divisional_Approver__c.field-meta.xml
<CustomField>
    <fullName>MDR_Divisional_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDR Divisional Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IIT_Records3</relationshipName>
    <type>Lookup</type>
</CustomField>