force-app/main/default/objects/IIT__c/fields/MDR_DivisionalApprover__c.field-meta.xml
<CustomField>
    <fullName>MDR_DivisionalApprover__c</fullName>
    <label>MDR_DivisionalApprover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>