force-app/main/default/objects/IIT__c/fields/MDR_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>MDR_Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDR Employee Name</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>IIT Records (MDR Employee Name)</relationshipLabel>
    <relationshipName>IIT_Records</relationshipName>
    <type>Lookup</type>
</CustomField>