force-app/main/default/objects/IIT__c/fields/MDR_Hotspot__c.field-meta.xml
<CustomField>
    <fullName>MDR_Hotspot__c</fullName>
    <label>MDR_Hotspot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>