force-app/main/default/objects/IIT__c/fields/MDR_HotspotComment__c.field-meta.xml
<CustomField>
    <fullName>MDR_HotspotComment__c</fullName>
    <label>MDR_HotspotComment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>