force-app/main/default/objects/IIT__c/fields/MDR_InternationalRoaming__c.field-meta.xml
<CustomField>
    <fullName>MDR_InternationalRoaming__c</fullName>
    <label>MDR_InternationalRoaming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>