force-app/main/default/objects/IIT__c/fields/MDR_InternationalRoamingComment__c.field-meta.xml
<CustomField>
    <fullName>MDR_InternationalRoamingComment__c</fullName>
    <label>MDR_InternationalRoamingComment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>