force-app/main/default/objects/IIT__c/fields/MDR_LostLocation__c.field-meta.xml
<CustomField>
    <fullName>MDR_LostLocation__c</fullName>
    <label>MDR_LostLocation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOHMH Location</fullName>
            </value>
            <value>
                <fullName>Non DOHMH Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>