force-app/main/default/objects/IIT__c/fields/MDR_Mobile_Phone_Carrier__c.field-meta.xml
<CustomField>
    <fullName>MDR_Mobile_Phone_Carrier__c</fullName>
    <label>MDR Mobile Phone Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Verizon Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>