force-app/main/default/objects/IIT__c/fields/MDR_MobileDeviceCosts__c.field-meta.xml
<CustomField>
    <fullName>MDR_MobileDeviceCosts__c</fullName>
    <label>MDR_MobileDeviceCosts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>