force-app/main/default/objects/IIT__c/fields/MDR_MobileDeviceOwnershipType__c.field-meta.xml
<CustomField>
    <fullName>MDR_MobileDeviceOwnershipType__c</fullName>
    <label>MDR_MobileDeviceOwnershipType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bring Your Own Device (BYOD)</fullName>
            </value>
            <value>
                <fullName>DOHMH Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>