force-app/main/default/objects/IIT__c/fields/MDR_MobileDeviceRequestJustification__c.field-meta.xml
<CustomField>
    <fullName>MDR_MobileDeviceRequestJustification__c</fullName>
    <label>MDR_MobileDeviceRequestJustification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>