force-app/main/default/objects/IIT__c/fields/MDR_MobileDeviceType__c.field-meta.xml
<CustomField>
    <fullName>MDR_MobileDeviceType__c</fullName>
    <description>iPhone (both device &amp; data plan)
iPAD (data plan only)
Samsung Tablet (data plan only)
CCEWIN
Verizon Flip Phone  (both device &amp; cell plan)
ISP AirCard  (both device &amp; data plan)
Apple Phone
Android Phone
Tablet
Other</description>
    <label>MDR_MobileDeviceType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iPhone (both device &amp; data plan)</fullName>
            </value>
            <value>
                <fullName>iPad (data plan only)</fullName>
            </value>
            <value>
                <fullName>Samsung Tablet (data plan only)</fullName>
            </value>
            <value>
                <fullName>CCEWIN</fullName>
            </value>
            <value>
                <fullName>Verizon Flip Phone (both device &amp; cell plan)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ISP AirCard (Both Device &amp; Data Plan)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>