force-app/main/default/objects/IIT__c/fields/MDR_MobilePhoneNumber4Replace__c.field-meta.xml
<CustomField>
    <fullName>MDR_MobilePhoneNumber4Replace__c</fullName>
    <label>MDR_MobilePhoneNumber4Replace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>