force-app/main/default/objects/IIT__c/fields/MDR_MobilePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>MDR_MobilePhoneNumber__c</fullName>
    <label>MDR_MobilePhoneNumber</label>
    <type>Phone</type>
</CustomField>