force-app/main/default/objects/IIT__c/fields/MDR_NonVerifyACDC__c.field-meta.xml
<CustomField>
    <fullName>MDR_NonVerifyACDC__c</fullName>
    <label>MDR_NonVerifyACDC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>