force-app/main/default/objects/IIT__c/fields/MDR_Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>MDR_Requester_Email__c</fullName>
    <label>MDR Requester Email</label>
    <type>Email</type>
</CustomField>