force-app/main/default/objects/IIT__c/fields/MDR_RequesterWorkUnit__c.field-meta.xml
<CustomField>
    <fullName>MDR_RequesterWorkUnit__c</fullName>
    <label>MDR_RequesterWorkUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>