force-app/main/default/objects/IIT__c/fields/MDR_SerialOrIMEI__c.field-meta.xml
<CustomField>
    <fullName>MDR_SerialOrIMEI__c</fullName>
    <label>MDR_SerialOrIMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>