force-app/main/default/objects/IIT__c/fields/MDR_ServiceCarrier__c.field-meta.xml
<CustomField>
    <fullName>MDR_ServiceCarrier__c</fullName>
    <description>Verizon Wireless
AT&amp;T
T-Mobile
Sprint</description>
    <label>MDR_ServiceCarrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>