force-app/main/default/objects/IIT__c/fields/MDR_ServiceTicket__c.field-meta.xml
<CustomField>
    <fullName>MDR_ServiceTicket__c</fullName>
    <label>MDR_ServiceTicket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>