force-app/main/default/objects/IIT__c/fields/MDR_SIMOrCCID__c.field-meta.xml
<CustomField>
    <fullName>MDR_SIMOrCCID__c</fullName>
    <label>MDR_SIMOrCCID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>