force-app/main/default/objects/IIT__c/fields/MDR_TypeOfService__c.field-meta.xml
<CustomField>
    <fullName>MDR_TypeOfService__c</fullName>
    <label>MDR_TypeOfService</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Change in Features</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>