force-app/main/default/objects/IIT__c/fields/MDR_VerifyACDCById__c.field-meta.xml
<CustomField>
    <fullName>MDR_VerifyACDCById__c</fullName>
    <label>MDR_VerifyACDCById</label>
    <length>255</length>
    <type>Text</type>
</CustomField>