force-app/main/default/objects/IIT__c/fields/SECA_AppScan__c.field-meta.xml
<CustomField>
    <fullName>SECA_AppScan__c</fullName>
    <label>SECA_AppScan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>