force-app/main/default/objects/IIT__c/fields/SECA_ChangesDesc__c.field-meta.xml
<CustomField>
    <fullName>SECA_ChangesDesc__c</fullName>
    <label>SECA_ChangesDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>