force-app/main/default/objects/IIT__c/fields/SECA_Consult01User__c.field-meta.xml
<CustomField>
    <fullName>SECA_Consult01User__c</fullName>
    <label>SECA_Consult01User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>