force-app/main/default/objects/IIT__c/fields/SECA_DivisionalApprover__c.field-meta.xml
<CustomField>
    <fullName>SECA_DivisionalApprover__c</fullName>
    <label>SECA_DivisionalApprover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>