force-app/main/default/objects/IIT__c/fields/SECA_DivisionGroup__c.field-meta.xml
<CustomField>
    <fullName>SECA_DivisionGroup__c</fullName>
    <label>SECA_DivisionGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>