force-app/main/default/objects/IIT__c/fields/SECA_ExpireInDays__c.field-meta.xml
<CustomField>
    <fullName>SECA_ExpireInDays__c</fullName>
    <label>SECA_ExpireInDays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>