force-app/main/default/objects/IIT__c/fields/SECA_ProjectedDeploymentDate__c.field-meta.xml
<CustomField>
    <fullName>SECA_ProjectedDeploymentDate__c</fullName>
    <label>SECA_ProjectedDeploymentDate</label>
    <type>Date</type>
</CustomField>