force-app/main/default/objects/IIT__c/fields/SECA_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>SECA_ProjectType__c</fullName>
    <label>SECA_ProjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>