force-app/main/default/objects/IIT__c/fields/SECA_ReAssessFlag__c.field-meta.xml
<CustomField>
    <fullName>SECA_ReAssessFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SECA_ReAssessFlag</label>
    <type>Checkbox</type>
</CustomField>