force-app/main/default/objects/IIT__c/fields/SECA_RecordLastApprovedOn__c.field-meta.xml
<CustomField>
    <fullName>SECA_RecordLastApprovedOn__c</fullName>
    <label>SECA_RecordLastApprovedOn</label>
    <type>DateTime</type>
</CustomField>