force-app/main/default/objects/IIT__c/fields/SECA_RiskLevelDateFlag__c.field-meta.xml
<CustomField>
    <fullName>SECA_RiskLevelDateFlag__c</fullName>
    <label>SECA_RiskLevelDateFlag</label>
    <type>DateTime</type>
</CustomField>