force-app/main/default/objects/IIT__c/fields/SECA_RiskLevelDuplicateFlag__c.field-meta.xml
<CustomField>
    <fullName>SECA_RiskLevelDuplicateFlag__c</fullName>
    <label>SECA_RiskLevelDuplicateFlag</label>
    <type>DateTime</type>
</CustomField>