force-app/main/default/objects/IIT__c/fields/SECA_SADRequired__c.field-meta.xml
<CustomField>
    <fullName>SECA_SADRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SECA_SADRequired</label>
    <type>Checkbox</type>
</CustomField>