force-app/main/default/objects/IIT__c/fields/SECA_StagingUrl__c.field-meta.xml
<CustomField>
    <fullName>SECA_StagingUrl__c</fullName>
    <label>SECA_StagingUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>