force-app/main/default/objects/IIT__c/fields/VPNR_AcceptDOHMHPolicy__c.field-meta.xml
<CustomField>
    <fullName>VPNR_AcceptDOHMHPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VPNR_AcceptDOHMHPolicy</label>
    <type>Checkbox</type>
</CustomField>