force-app/main/default/objects/IIT__c/fields/VPNR_AcceptDOHMHPolicyBy__c.field-meta.xml
<CustomField>
    <fullName>VPNR_AcceptDOHMHPolicyBy__c</fullName>
    <label>VPNR_AcceptDOHMHPolicyBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>