force-app/main/default/objects/IIT__c/fields/VPNR_AssignedIpAddress__c.field-meta.xml
<CustomField>
    <fullName>VPNR_AssignedIpAddress__c</fullName>
    <label>VPNR_AssignedIpAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>