force-app/main/default/objects/IIT__c/fields/VPNR_AssignedWorkStaionSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>VPNR_AssignedWorkStaionSerialNumber__c</fullName>
    <label>VPNR_AssignedWorkStaionSerialNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>