force-app/main/default/objects/IIT__c/fields/VPNR_AssignedWorkStationName__c.field-meta.xml
<CustomField>
    <fullName>VPNR_AssignedWorkStationName__c</fullName>
    <label>VPNR_AssignedWorkStationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>