force-app/main/default/objects/IIT__c/fields/VPNR_DivisionalApprover__c.field-meta.xml
<CustomField>
    <fullName>VPNR_DivisionalApprover__c</fullName>
    <label>VPNR_DivisionalApprover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>