force-app/main/default/objects/IIT__c/fields/VPNR_DivisionGroup__c.field-meta.xml
<CustomField>
    <fullName>VPNR_DivisionGroup__c</fullName>
    <label>VPNR_DivisionGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>