force-app/main/default/objects/IIT__c/fields/VPNR_Justification__c.field-meta.xml
<CustomField>
    <fullName>VPNR_Justification__c</fullName>
    <label>VPNR_Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>