force-app/main/default/objects/IIT__c/listViews/ITPT_List.listView-meta.xml
<ListView>
    <fullName>ITPT_List</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>ITPT List</label>
</ListView>